<resources>
    <string name="app_name">Challenge</string>
    <string name="L1">L1</string>
    <string name="L2">L2</string>
    <string name="L3">L3</string>
    <string name="buy">購買</string>
    <string name="cancel">取消</string>
    <string name="bye">掰</string>
    <string name="level1">Level One</string>
    <string name="level2">Level Two</string>
    <string name="level3">Level Three</string>
    <string name="cash">$</string>
    <string name="nothing"> </string>
    <string name="sold">SOLD</string>
    <string name="soldout">SOLD  OUT</string>
    <string name="haha">您錢有帶夠嗎?!</string>
    <string name="account">帳號：</string>
    <string name="hintAccount">請輸入帳號</string>
    <string name="password">密碼：</string>
    <string name="hintPassword">請輸入密碼</string>
    <string name="record">記住帳號密碼</string>
    <string name="registered">註冊</string>
    <string name="login">登入</string>
    <string name="forgot">忘記帳密</string>
    <string name="back">返回</string>

</resources>
