<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">

    <ImageView
        android:id="@+id/imageWelcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/welcome" />

    <TextView
        android:id="@+id/textAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginStart="50dp"
        android:text="@string/account"
        android:textSize="33sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/hintAccount"
        android:textSize="33sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/textAccount"
        app:layout_constraintStart_toEndOf="@id/textAccount"/>

    <TextView
        android:id="@+id/textPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/password"
        android:textSize="33sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/textAccount"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:inputType="textPassword"
        android:hint="@string/hintPassword"
        android:textSize="33sp"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toEndOf="@id/textPassword"/>

    <CheckBox
        android:id="@+id/checkRecord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:buttonTint="@android:color/white"
        android:text="@string/record"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/textPassword"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/canseeit"
        android:text="@string/registered"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/checkRecord"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btn_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/canseeit"
        android:text="@string/forgot"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/btn_registered"
        app:layout_constraintStart_toEndOf="@id/btn_registered" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:backgroundTint="@color/canseeit"
        android:text="@string/login"
        android:textSize="25sp"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/btn_forgot"
        app:layout_constraintStart_toEndOf="@id/btn_forgot"  />


</androidx.constraintlayout.widget.ConstraintLayout>