<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="always"
    tools:context=".MagicActivity">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/customeGray"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:text="@string/level1"
                android:textColor="@android:color/white"
                android:textSize="45sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerL1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A" />

            <TextView
                android:id="@+id/textL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:text="@string/level2"
                android:textColor="@android:color/white"
                android:textSize="45sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerL2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A" />

            <TextView
                android:id="@+id/textL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:paddingEnd="0dp"
                android:text="@string/level3"
                android:textColor="@android:color/white"
                android:textSize="45sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerL3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#4A4A4A" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
