<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/purchaseLayout"
    android:layout_width="250dp"
    android:layout_height="350dp"
    android:background="@layout/purchase">

    <ImageView
        android:id="@+id/imagePurchase"
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/m0" />

    <TextView
        android:id="@+id/textPurchasePrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="$  100"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/white"
        android:textSize="35sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imagePurchase" />

    <TextView
        android:id="@+id/textPurchaseBuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginStart="30dp"
        android:text="@string/buy"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:background="@layout/buybuttonshape"
        app:layout_constraintTop_toBottomOf="@id/textPurchasePrice"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/textPurachseCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:text="@string/cancel"
        android:textSize="30sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"
        android:background="@layout/buybuttonshape"
        app:layout_constraintTop_toBottomOf="@id/textPurchasePrice"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/_"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#4A4A4A"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toBottomOf="@id/textPurchaseBuy"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@android:color/white"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/_"/>

    <TextView
        android:id="@+id/textPurachseBye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:background="@layout/buybuttonshape"
        android:text="@string/bye"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textPurchasePrice" />

</androidx.constraintlayout.widget.ConstraintLayout>
