<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShopActivity">

   <TextView
        android:id="@+id/textViewL1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:gravity="center"
        android:text="@string/L1"
        android:textSize="40dp"
        android:textColor="@android:color/white"
        android:background="#4A4A4A"
        android:contextClickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewL2"
        app:layout_constraintHorizontal_weight="1"/>

   <TextView
        android:id="@+id/textViewL2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="3dp"
        android:gravity="center"
        android:text="@string/L2"
        android:textSize="40dp"
        android:textColor="@android:color/white"
        android:background="#4A4A4A"
        android:contextClickable="true"
        app:layout_constraintStart_toEndOf="@+id/textViewL1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/textViewL3"
        app:layout_constraintHorizontal_weight="1"/>

   <TextView
        android:id="@+id/textViewL3"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="3dp"
        android:gravity="center"
        android:text="@string/L3"
        android:textSize="40dp"
        android:textColor="@android:color/white"
        android:background="#4A4A4A"
        android:contextClickable="true"
        app:layout_constraintStart_toEndOf="@+id/textViewL2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toStartOf="@id/imageViewList1"
        app:layout_constraintHorizontal_weight="1"/>

   <ImageView
        android:id="@+id/imageViewList1"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="3dp"
        android:background="#4A4A4A"
        android:paddingTop="25dp"
        android:paddingStart="15dp"
        android:paddingBottom="25dp"
        android:paddingEnd="15dp"
        android:contextClickable="true"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/imageViewList2"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/textViewL3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/list1" />

   <ImageView
        android:id="@+id/imageViewList2"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginStart="3dp"
        android:gravity="center"
        android:contextClickable="true"
        android:background="#4A4A4A"
        android:paddingTop="25dp"
        android:paddingStart="15dp"
        android:paddingBottom="25dp"
        android:paddingEnd="15dp"
        app:srcCompat="@drawable/list2"
        app:layout_constraintStart_toEndOf="@+id/imageViewList1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

   <ImageView
        android:id="@+id/imageViewm"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:paddingTop="12dp"
        android:paddingStart="130dp"
        android:paddingBottom="12dp"
        android:paddingEnd="8dp"
        android:tint="@android:color/white"
        android:background="#4A4A4A"
        app:srcCompat="@drawable/money"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewL1"
        app:layout_constraintEnd_toStartOf="@id/textViewm"
        app:layout_constraintHorizontal_weight="1"/>

   <TextView
        android:id="@+id/textViewm"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:text="$"
        android:textSize="35sp"
        android:background="#4A4A4A"
        app:layout_constraintStart_toEndOf="@id/imageViewm"
        app:layout_constraintTop_toBottomOf="@id/textViewL1"
        app:layout_constraintEnd_toStartOf="@id/textViewMoney"/>

   <TextView
        android:id="@+id/textViewMoney"
        android:layout_width="0dp"
        android:layout_height="100dp"
        android:layout_marginTop="3dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:text="2000"
        android:textSize="35sp"
        android:background="#4A4A4A"
        app:layout_constraintStart_toEndOf="@id/textViewm"
        app:layout_constraintTop_toBottomOf="@id/textViewL1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"/>

   <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="3dp"
        android:background="#4A4A4A"
        app:layout_constraintTop_toBottomOf="@id/imageViewm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:listitem="@layout/cell_magic_linear"/>

<!--   <androidx.constraintlayout.widget.ConstraintLayout-->
<!--        android:id="@+id/purchaseLayout"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginStart="50dp"-->
<!--        android:layout_marginTop="180dp"-->
<!--        android:layout_marginEnd="50dp"-->
<!--        android:layout_marginBottom="180dp"-->
<!--        android:background="@layout/purchase"-->
<!--        android:visibility="gone"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toTopOf="parent">-->

<!--        <ImageView-->
<!--            android:id="@+id/imagePurchase"-->
<!--            android:layout_width="130dp"-->
<!--            android:layout_height="130dp"-->
<!--            android:layout_marginTop="30dp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toTopOf="parent"-->
<!--            app:srcCompat="@drawable/m0" />-->

<!--        <TextView-->
<!--            android:id="@+id/textPurchasePrice"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:textAlignment="center"-->
<!--            android:text="$  100"-->
<!--            android:layout_marginTop="20dp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textSize="45sp"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/imagePurchase" />-->

<!--        <TextView-->
<!--            android:id="@+id/textPurchaseBuy"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginStart="15dp"-->
<!--            android:text="@string/magic_id"-->
<!--            android:textSize="30sp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textAlignment="center"-->
<!--            android:background="@layout/buybuttonshape"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textPurchasePrice"-->
<!--            app:layout_constraintStart_toStartOf="parent"/>-->

<!--        <TextView-->
<!--            android:id="@+id/textPurachseCancel"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginEnd="15dp"-->
<!--            android:text="@string/cancel"-->
<!--            android:textSize="30sp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:textAlignment="center"-->
<!--            android:background="@layout/buybuttonshape"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textPurchasePrice"-->
<!--            app:layout_constraintEnd_toEndOf="parent"/>-->

<!--        <TextView-->
<!--            android:id="@+id/textPurachseBye"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="100dp"-->
<!--            android:layout_marginTop="50dp"-->
<!--            android:layout_marginEnd="100dp"-->
<!--            android:background="@layout/buybuttonshape"-->
<!--            android:text="@string/bye"-->
<!--            android:textAlignment="center"-->
<!--            android:textSize="30sp"-->
<!--            android:textColor="@android:color/white"-->
<!--            android:visibility="gone"-->
<!--            app:layout_constraintEnd_toEndOf="parent"-->
<!--            app:layout_constraintStart_toStartOf="parent"-->
<!--            app:layout_constraintTop_toBottomOf="@id/textPurchasePrice" />-->

<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->


</androidx.constraintlayout.widget.ConstraintLayout>